--- a/src/assets/scss/header/_mobile-menu-toggle.scss
+++ b/src/assets/scss/header/_mobile-menu-toggle.scss
@@ -40,7 +40,7 @@
 
                 content: "";
 
-                background-color: var(--clr-white);
+                background-color: var(--clr-black);
             }
 
             &.icon-top,
