--- a/src/assets/scss/header/_main-menu.scss
+++ b/src/assets/scss/header/_main-menu.scss
@@ -24,7 +24,7 @@
 
                 padding: 40px 15px;
 
-                color: var(--clr-white);
+                color: var(--clr-black);
 
                 & .menu-text {
                     display: flex;
