--- a/src/assets/scss/header/_mobile-menu.scss
+++ b/src/assets/scss/header/_mobile-menu.scss
@@ -14,7 +14,7 @@
     transition: var(--transition);
 
     opacity: 0;
-    background: rgba(var(--clr-black-rgb), 0.7);
+    background-color: rgba(var(--clr-black-rgb), 0.7);
     &.active {
         visibility: visible;
         opacity: 1;
@@ -94,7 +94,7 @@
     height: 80px;
     padding: 0 15px 0 30px;
 
-    background-color: var(--clr-heading);
+    background-color:white;
 }
 
 .mobile-menu-logo {
