--- a/src/assets/scss/header/_mobile-menu-toggle.scss
+++ b/src/assets/scss/header/_mobile-menu-toggle.scss
@@ -77,7 +77,7 @@
             & i {
                 &::before,
                 &::after {
-                    background-color: var(--clr-white);
+                    background-color: var(--clr-black);
                 }
 
                 &.icon-top,
@@ -120,7 +120,7 @@
             & i {
                 &::before,
                 &::after {
-                    background-color: var(--clr-white);
+                    background-color: var(--clr-black);
                 }
             }
 
@@ -128,7 +128,7 @@
                 & i {
                     &::before,
                     &::after {
-                        background-color: var(--clr-white);
+                        background-color: var(--clr-black);
                     }
                 }
             }
